# ComfyUI-Johns

./: README.md  __init__.py  pyproject.toml  requirements.txt
Node/: AnySwitch.py  ImageComparer.py  LoRALoader.py  MaskEditor.py  MathExpression.py  Pipes.py  Primitives.py  PromptLibrary.py  ResolutionCalculator.py  SetMode.py  Test.py  TiledSampler.py  WorkflowLooper.py
Node/Backend/: AnySwitchBackend.py  CustomTypes.py  ImageComparerBackend.py  LoRALoaderBackend.py  Logger.py  (+7 more)
Workflows/: All Nodes.json  FLUX - I2I - Advanced - Expanded.json  FLUX - I2I - Segmet - Mask - Expanded.json  FLUX - T2I - Basic - Clean.json  FLUX - T2I - Basic - Expanded.json  I2I - Advanced - Clean.json  I2I - Advanced - Expanded.json  I2I - Basic - Clean.json  I2I - Basic - Expanded.json  I2I - Basic Upscale - Clean.json  I2I - Basic Upscale - Expanded.json  I2I - Segmet - Mask - Clean.json  I2I - Segmet - Mask - Expanded.json  T2I - Basic - Clean.json  T2I - Basic - Expanded.json  ZIT - I2I - Advanced - Expanded.json
js/: JohnsAnySwitch.js  JohnsComfyUiApi.js  JohnsCornerRounding.js  JohnsCustomBorders.js  JohnsCustomSocketColor.js  JohnsDefaultNodeSizes.js  JohnsEarly00sFun.js  JohnsImageComparer.js  JohnsLoRALoader.js  JohnsMaskEditor.js  JohnsMathExpression.js  JohnsNormalizeIDs.js  JohnsOriginAxes.js  JohnsOriginAxesButton.js  JohnsPromptLibrary.js  JohnsRuntimeNumberMinMax.js  JohnsSetMode.js  JohnsSettingsMenu.js  JohnsSettingsState.js  JohnsTileDiffusionMap.js  JohnsTiledSampler.js  JohnsTiledSamplerAndMapSync.js  JohnsToast.js  JohnsWidgetHacks.js  JohnsWorkflowLooper.js
